@@ -1,4 +1,8 @@
 {{$NEXT}}
+    - Updated bundled list to latest version.
+    - Adjusted .jp tests to match new list rules.
+    - Abandoned awful lispish syntax experiment (sorry).
+    - Changed default for downloading new public suffix list on install to "no."
 
 v0.1.7    2012-06-28 08:46:41 America/Chicago
     - Untabified.
